# 4D-System

./: .gitignore  4D_System.slnx  4D_System.vcxproj  4D_System.vcxproj.filters  CMakeLists.txt  OV9281_Driver.cpp  README.md  SimulatedEvent.cpp  camera.cpp  cmd.cpp  display.cpp  main.cpp  sample.cpp  temperature.cpp
Edge_Pi_CPP/: 4D_System.slnx  4D_System.vcxproj.filters  CMakeLists.txt  OV9281_Driver.cpp  cmd.cpp  display.cpp  main.cpp  sample.cpp  temperature.cpp
Edge_Pi_CPP/SDK/include/: OV9281_Driver.h  SimulatedEvent.h  all_config.h  falcon_cmd.h  libirtemp.h  sample.h
Edge_Pi_CPP/SDK/lib/: libirtemp.lib
Hardware/模型/: 毕设外壳_中间部分.stl  毕设外壳_前端.stl  毕设外壳_后端.stl  毕设外壳_延长.stl  毕设外壳_摄像头架.stl  防滑贴.dxf
PC_Server_Python/: alignment_matrix.npy  auto_alignment_matrix.npy  calibration_matrix.npy  comms_engine.py  config.py  dist_coeffs.npy  matrix_corner_pin.npy  matrix_ghost.npy  matrix_homography.npy  matrix_point_reverse.npy  matrix_scope_dist.npy  matrix_sift.npy  matrix_tactical.npy  tactical_ui.py  test.py
PC_Server_Python/algorithms/: alignment.py  event_sim.py  vignetting.py
PC_Server_Python/core/: data_link.py  sync_engine.py
PC_Server_Python/ui/: components.py  main_window.py
Project_Docs/: 1.12头脑风暴.md  树莓派拉取视频流.md
README/: 传输系统.md  树莓派拉取视频流.md  模拟事件相机.md
SDK/include/: OV9281_Driver.h  SimulatedEvent.h  all_config.h  cmd.h  data.h  display.h  libirprocess.h  libirtemp.h  sample.h  temperature.h
SDK/lib/: libirparse.lib  libirprocess.lib  libiruvc.lib
日志/: 模拟事件相机.md
